using UnityEngine;
using UnityEngine.SceneManagement;

public class PlayerMove : MonoBehaviour
{
    public float defaultSpeed;          // 기본 이동 속도
    public float runMulti;              // 달렸을 때 기본 이동 속도의 배수
    public float jumpPower = 10f;       // 플레이어 점프력

    private float toSpeed;              // 목표 이동속도
    private float currentSpeed;         // 현재 이동속도

    private CharacterController characterController;    
    private Rigidbody rigid;
    private Animator animator;
    private Vector3 moveDirection;

    private bool isJumpAnimation = false;
    private bool isGrounded = true;

    public void Start()
    {
        DontDestroyOnLoad(gameObject.transform.parent);

        characterController = GetComponent<CharacterController>();
        animator = GetComponent<Animator>();

        Debug.Assert(characterController != null, "Error (Null Reference) : 해당 객체에 characterController가 존재하지 않습니다.");
        Debug.Assert(animator != null, "Error (Null Reference) : 해당 객체에 Animator가 존재하지 않습니다.");
    }

    public void Update()
    {
        characterController.Move(moveDirection * Time.deltaTime);

        if (TypeStory.hasActivatedCanvas || ItemShopOpenClose.isShopOpen || PlayerGetAurasArrow.isGetting)
        {
            animator.SetBool("isWalk", false);
            moveDirection = Vector3.zero;
            return;
        }

        // 현재 점프 중인지 확인
        isJumpAnimation = animator.GetCurrentAnimatorStateInfo(0).IsName("Jumping");

        CheckIsGround();

        // 만약 점프 키를 눌렸을 때 NPC와 대화 중인 경우 점프를 하지 않았을 경우
        if (ChatNPC.isEnd && Input.GetKeyDown(KeyCode.Space) && !isJumpAnimation && isGrounded && (animator.GetFloat("IdleMode") < 1))
            Jump();

        // 이동 처리
        Move();

        SetGravity();
    }

    private void Jump()
    {
        animator.SetTrigger("Jump");                // 점프 트리거 발생
        moveDirection.y += jumpPower;               // 위로 점프력만큼 위로 올림
        isGrounded = false;                         // 현재 캐릭터가 땅에 있지 않음을 표시
    }

    private void Move()
    {
        // NPC와 대화 중인 경우 이동하지 않음
        if (!ChatNPC.isEnd)
        {
            animator.SetFloat("PlayerFront", 0.0f);
            animator.SetFloat("PlayerLeft", 0.0f);

            animator.SetBool("isWalk", false);
            return;
        }

        // 이동 입력 키를 입력 받음
        float x = Input.GetAxis("Horizontal"), y = Input.GetAxis("Vertical");
        float idleMode = animator.GetFloat("IdleMode");

        
        // 달리는 키를 눌렸을 때 목표 속도를 지정함
        toSpeed = defaultSpeed;

        if (SceneManager.GetActiveScene().name == "Forest")
            toSpeed *= 0.3f;

        if (Input.GetKey(KeyCode.LeftShift) && (idleMode != 1.0f) && !(idleMode > 2.9f && idleMode < 3.1f))
            toSpeed *= runMulti;

        // 걷는 속도와 달리는 속도에서 순간적인 부분을 부드럽게 수정
        currentSpeed = Mathf.Lerp(currentSpeed, toSpeed, Time.deltaTime * 3.0f);

        // 만약 점프를 하지 않고 이동 키를 눌렸을 경우
        if (!isJumpAnimation && new Vector2(x, y).magnitude > 0)
        {
            // 애니메이션이 작동하지 않을 경우에만 애니메이션 실행 
            if (!animator.GetBool("isWalk"))
                animator.SetBool("isWalk", true);

            // 해당 방향에 맞는 애니메이션이 실행하도록 변수 조정
            if (SceneManager.GetActiveScene().name != "Forest")
            {
                animator.SetFloat("PlayerFront", (x * currentSpeed) / defaultSpeed);
                animator.SetFloat("PlayerLeft", (y * currentSpeed) / defaultSpeed);
            }

            else
            {
                animator.SetFloat("PlayerFront", (x * currentSpeed) / (defaultSpeed * 0.3f));
                animator.SetFloat("PlayerLeft", (y * currentSpeed) / (defaultSpeed * 0.3f));
            }

            // 키보드 입력 방향으로 움직임
            moveDirection = new Vector3(x, 0, y);
            moveDirection = transform.TransformDirection(moveDirection); // 캐릭터 로컬 좌표계 기준으로 이동 방향 변환
            moveDirection *= currentSpeed;
            moveDirection.y = Physics.gravity.y;        // 공중으로 이동 금지

            if (SceneManager.GetActiveScene().name == "Forest")
                moveDirection.y /= 10;
        }

        // 만약 입력 키를 누르지 않았다면 Idle 상태로 돌아감
        else
        {
            if (animator.GetBool("isWalk"))
            {
                animator.SetBool("isWalk", false);
                characterController.Move(Vector3.zero);
            }

            moveDirection = Vector3.Lerp(moveDirection, Vector3.zero, Time.deltaTime * 2.0f); // 점진적으로 속도 감소
        }
    }

    private void SetGravity()
    {
        if (characterController.isGrounded)
            moveDirection.y = 0;

        else
            moveDirection.y += Physics.gravity.y * Time.deltaTime;
    }

    private void CheckIsGround()
    {
        isGrounded = characterController.isGrounded;
    }
}